templates/http/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels: 
    app.kubernetes.io/instance: {component-name}
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name:  {component-name}
    app.kubernetes.io/part-of: {application-name}
  name: {component-name}
  namespace: {component-namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance:  {component-name} 
  template:
    metadata: 
      labels:
        app.kubernetes.io/instance:  {component-name}
    spec:
      containers:
      - image: {image-name}
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        name: container-image
        ports:
        - containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: 8080
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 50Mi
